# FSOFT2023_1DB_3

./: CMakeLists.txt
FSOFT2023_1DB_3/: CMakeLists.txt
FSOFT2023_1DB_3/headers/: Menu.h
FSOFT2023_1DB_3/headers/Funcoes_Jogadores/: Jogador.h  equipa.h
FSOFT2023_1DB_3/headers/Jogo_Especial_Stat/: Jogo_Especial_MN.h
FSOFT2023_1DB_3/headers/Jogos_Stats/: Jogos_CS.h  Jogos_LOL.h  Jogos_RL.h
FSOFT2023_1DB_3/sources/: Menu.cpp
FSOFT2023_1DB_3/sources/Funcoes_Jogadores/: Jogador.cpp  equipa.cpp
FSOFT2023_1DB_3/sources/Jogo_Especial_Stat/: Jogo_Especial_MN.cpp
FSOFT2023_1DB_3/sources/Jogos_Stats/: Jogos_CS.cpp  Jogos_LOL.cpp  Jogos_RL.cpp
headers/Funções_Jogadores/: Ad_Jogador.h  Rm_Jogadores.h
headers/Jogo_Especial_Stat/: Jogo_Especial_MN.h
headers/Jogos_Stats/: Jogos_CS.h  Jogos_LOL.h  Jogos_RL.h
headers/Menu/: Equipa.h  Jogadores.h  JogoEspecial.h  Jogos.h
sources/Funções_Jogadores/: Ad_Jogador.cpp  Rm_Jogadores.cpp
sources/Jogo_Especial_Stat/: Jogo_Especial_MN.cpp
sources/Jogos_Stats/: Jogos_CS.cpp  Jogos_LOL.cpp  Jogos_RL.cpp
sources/Menu/: Equipa.cpp  Jogadores.cpp  JogoEspecial.cpp  Jogos.cpp
